--- a/HealthMonitor_STM32F103C8/MDK-ARM/HealthMonitor/HealthMonitor.build_log.htm
+++ b/HealthMonitor_STM32F103C8/MDK-ARM/HealthMonitor/HealthMonitor.build_log.htm
@@ -21,47 +21,47 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.5.0
 Dialog DLL:      TCM.DLL V1.36.1.0
  
 <h2>Project:</h2>
-E:\BitsPilaniMTech\Learning\BitsLearning\Software_For_Embedded_Systems\Mini_Project\MiniProject2024ht01021\HealthMonitor\MDK-ARM\HealthMonitor.uvprojx
-Project File Date:  09/14/2024
+E:\BitsPilaniMTech\Learning\HealthMonitoring_BITS_Pilani_2024ht01021\HealthMonitor_STM32F103C8\MDK-ARM\HealthMonitor.uvprojx
+Project File Date:  09/18/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'HealthMonitor'
 assembling startup_stm32f103xb.s...
-compiling usart.c...
 compiling stm32f1xx_it.c...
-compiling usb_device.c...
-compiling adc.c...
-compiling gpio.c...
-compiling main.c...
 compiling stm32f1xx_hal_msp.c...
-compiling stm32f1xx_hal_pcd_ex.c...
-compiling usbd_cdc_if.c...
-compiling stm32f1xx_hal_gpio_ex.c...
+compiling gpio.c...
+compiling usb_device.c...
+compiling usart.c...
+compiling adc.c...
+compiling main.c...
 compiling usbd_desc.c...
-compiling usbd_conf.c...
-compiling stm32f1xx_hal_pcd.c...
-compiling stm32f1xx_ll_usb.c...
-compiling stm32f1xx_hal_gpio.c...
 compiling stm32f1xx_hal.c...
+compiling stm32f1xx_hal_pcd.c...
+compiling stm32f1xx_hal_gpio_ex.c...
+compiling usbd_cdc_if.c...
+compiling stm32f1xx_hal_pcd_ex.c...
+compiling usbd_conf.c...
+compiling stm32f1xx_ll_usb.c...
 compiling stm32f1xx_hal_cortex.c...
-compiling stm32f1xx_hal_pwr.c...
-compiling stm32f1xx_hal_rcc_ex.c...
+compiling stm32f1xx_hal_gpio.c...
 compiling stm32f1xx_hal_dma.c...
-compiling stm32f1xx_hal_rcc.c...
-compiling stm32f1xx_hal_exti.c...
-compiling stm32f1xx_hal_adc.c...
 compiling stm32f1xx_hal_flash.c...
-compiling stm32f1xx_hal_flash_ex.c...
-compiling stm32f1xx_hal_tim_ex.c...
+compiling stm32f1xx_hal_rcc_ex.c...
+compiling stm32f1xx_hal_pwr.c...
+compiling stm32f1xx_hal_rcc.c...
 compiling stm32f1xx_hal_tim.c...
 compiling stm32f1xx_hal_adc_ex.c...
-compiling usbd_cdc.c...
-compiling usbd_core.c...
-compiling system_stm32f1xx.c...
-compiling usbd_ctlreq.c...
-compiling usbd_ioreq.c...
+compiling stm32f1xx_hal_exti.c...
+compiling stm32f1xx_hal_flash_ex.c...
+compiling stm32f1xx_hal_tim_ex.c...
+compiling stm32f1xx_hal_adc.c...
 compiling stm32f1xx_hal_uart.c...
+compiling system_stm32f1xx.c...
+compiling usbd_ioreq.c...
+compiling usbd_core.c...
+compiling usbd_ctlreq.c...
+compiling usbd_cdc.c...
 linking...
 Program Size: Code=14020 RO-data=312 RW-data=388 ZI-data=6292  
 FromELF: creating hex file...
@@ -88,7 +88,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.1.2
-Build Time Elapsed:  00:00:14
+Build Time Elapsed:  00:00:22
 </pre>
 </body>
 </html>
